--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+.container {
+  margin: 0 auto;
+  width: 1372px;
+  height: 818px;
+}
+
+.social {
+  padding-top: 56px;
+  padding-bottom: 80px;
+}
+.social__header {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  color: #19191E;
+  margin-bottom: 16px;
+}
+.social__descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4A4A4F;
+  margin-bottom: 32px;
+}
