--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,30 @@ body {
   width: 482px;
 }
 .social__tabs > li {
+  padding-bottom: 14px;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   color: #4A4A4F;
 }
+.social__tab_active {
+  border-bottom: 2px solid #2244CC;
+}
 
 .divider {
+  margin-top: 0;
   width: 100%;
   border: 1px solid #E1E1E6;
+}
+
+.card {
+  width: 320px;
+  height: 472px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4A4A4F;
+}
+.card:hover {
+  overflow-y: auto;
 }
