--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,7 @@ body {
 		width: 482px;
 
 		&>li {
+			padding-bottom: 14px;
 			font-weight: 700;
 			font-size: 18px;
 			line-height: 26px;
@@ -41,9 +42,28 @@ body {
 		}
 
 	}
+
+	&__tab_active {
+		border-bottom: 2px solid #2244CC;
+		;
+	}
 }
 
 .divider {
+	margin-top: 0;
 	width: 100%;
 	border: 1px solid #E1E1E6;
+}
+
+.card {
+	width: 320px;
+	height: 472px;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	color: #4A4A4F;
+
+	&:hover {
+		overflow-y: auto;
+	}
 }
