--- a/css/style.css
+++ b/css/style.css
@@ -59,14 +59,18 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #4A4A4F;
+  overflow: hidden;
+}
+.card:hover {
+  overflow: auto;
+  overflow-x: hidden;
 }
 .card__slider {
   margin-top: 32px;
 }
 .card__promo {
-  padding: 26px 32px;
-  padding-right: 48px;
-  min-height: 548px;
+  padding: 26px 31px;
+  height: 365px;
 }
 .card__hashtag {
   margin-top: 26px;
