--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,14 +62,18 @@ body {
 	font-size: 16px;
 	line-height: 24px;
 	color: #4A4A4F;
+	overflow: hidden;
+	&:hover {
+		overflow: auto;
+		overflow-x: hidden;
+	}
 
 	&__slider {
 		margin-top: 32px;
 	}
 	&__promo {
-		padding: 26px 32px;
-		padding-right: 48px;
-		min-height: 548px;
+		padding: 26px 31px;
+		height: 365px;
 	}
 	&__hashtag {
 		margin-top: 26px;
