--- a/css/style.css
+++ b/css/style.css
@@ -53,20 +53,22 @@ body {
 }
 
 .card {
+  margin: 0 8px;
   width: 320px;
   max-height: 472px;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: #4A4A4F;
-  overflow: hidden;
-}
-.card:hover {
-  overflow: auto;
-  overflow-x: hidden;
 }
 .card__slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: 32px;
+}
+.card__slider_wrapper {
+  overflow: hidden;
 }
 .card__promo {
   padding: 26px 31px;
