--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,20 +56,20 @@ body {
 }
 
 .card {
+	margin: 0 8px;
 	width: 320px;
 	max-height: 472px;
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 24px;
 	color: #4A4A4F;
-	overflow: hidden;
-	&:hover {
-		overflow: auto;
-		overflow-x: hidden;
-	}
 
 	&__slider {
+		display: flex;
 		margin-top: 32px;
+		&_wrapper {
+			overflow: hidden;
+		}
 	}
 	&__promo {
 		padding: 26px 31px;
