--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 .divider {
-  margin-top: 0;
+  margin: 0;
   width: 100%;
   border: 1px solid #E1E1E6;
 }
@@ -65,9 +65,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 32px;
 }
 .card__slider_wrapper {
+  position: relative;
+  padding-top: 32px;
   overflow: hidden;
 }
 .card__promo {
