--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,7 +50,7 @@ body {
 }
 
 .divider {
-	margin-top: 0;
+	margin: 0;
 	width: 100%;
 	border: 1px solid #E1E1E6;
 }
@@ -66,8 +66,9 @@ body {
 
 	&__slider {
 		display: flex;
-		margin-top: 32px;
 		&_wrapper {
+			position: relative;
+			padding-top: 32px;
 			overflow: hidden;
 		}
 	}
