--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,25 @@ body {
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 20;
 }
 
 .swiper-button-prev::after,
 .swiper-button-next::after,
 .swiper-pagination {
   display: none;
+}
+
+.swiper span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 0;
+  top: 178px;
+  width: 44px;
+  height: 44px;
+  color: #353545;
+  background-color: #FFFFFF;
 }
 
 .container {
