--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,13 +29,13 @@ body {
 
 .container {
 	margin: 0 auto;
-	width: 1372px;
-	height: 818px;
+	width: 1328px;
 }
 
 .social {
 	padding-top: 56px;
 	padding-bottom: 80px;
+	height: 818px;
 
 	&__header {
 		font-weight: 700;
@@ -64,6 +64,10 @@ body {
 			font-size: 18px;
 			line-height: 26px;
 			color: #4A4A4F;
+
+			&:hover {
+				cursor: pointer;
+			}
 		}
 
 	}
@@ -82,7 +86,6 @@ body {
 }
 
 .card {
-	margin: 0 8px;
 	width: 320px;
 	max-height: 472px;
 	font-weight: 400;
@@ -116,5 +119,66 @@ body {
 			text-decoration: none;
 			color: #2244CC;
 		}
+	}
+}
+
+
+@media screen and (max-width: 1500px) {
+	.container {
+		width: 1200px;
+	}
+
+	.card img {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 1200px) {
+	.container {
+		width: 960px;
+	}
+}
+
+@media screen and (max-width: 960px) {
+	.container {
+		width: 100%;
+	}
+
+	.social {
+		padding: 16px;
+
+		&__descr {
+			width: 344px;
+		}
+
+		&__tabs {
+			width: 360px;
+			height: 42px;
+			left: calc(50% - 360px/2 + 8px);
+			top: calc(50% - 42px/2 - 170px);
+			overflow-x: scroll;
+		}
+
+		&__tab {
+			margin-right: 39px;
+		}
+	}
+
+	.card img {
+		width: 320px;
+	}
+
+	.card {
+		&__promo {
+			padding-top: 22px;
+		}
+	}
+
+	.swiper span {
+		display: none;
+	}
+
+	.swiper-pagination {
+		display: block;
 	}
 }
