--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,16 @@ body {
           justify-content: center;
 }
 .swiper-pagination-bullet {
-  background-color: #191928 !important;
-  opacity: 0.5 !important;
+  width: 16px;
+  height: 4px;
+  background-color: #191928;
+  opacity: 0.5;
+  border-radius: 0%;
 }
 .swiper-pagination-bullet-active {
-  background-color: #2244CC !important;
-  opacity: 1 !important;
+  width: 24px;
+  background-color: #2244CC;
+  opacity: 1;
 }
 
 .swiper span.material-symbols-outlined {
