--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
 }
 
 .card {
+  position: relative;
   width: 320px;
   max-height: 472px;
   font-weight: 400;
@@ -112,6 +113,17 @@ body {
 .card:hover {
   overflow-x: hidden;
   cursor: pointer;
+}
+.card .gradient_block {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 80px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(21.88%, rgba(255, 255, 255, 0)), color-stop(69%, #FFFFFF));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 21.88%, #FFFFFF 69%);
+  border-bottom: 1px solid #E1E1E6;
 }
 .card__slider {
   display: -webkit-box;
