--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,6 +109,7 @@ body {
 }
 
 .card {
+	position: relative;
 	width: 320px;
 	max-height: 472px;
 	font-weight: 400;
@@ -117,11 +118,21 @@ body {
 	color: #4A4A4F;
 	border: 1px solid #E1E1E6;
 
+
 	&:hover {
 		overflow-x: hidden;
 		cursor: pointer;
 	}
 
+	.gradient_block {
+		position: sticky;
+		bottom: 0px;
+		left: 0px;
+		width: 100%;
+		height: 80px;
+		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 21.88%, #FFFFFF 69%);
+		border-bottom: 1px solid #E1E1E6;
+	}
 
 	&__slider {
 		display: flex;
