--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,10 +118,24 @@ body {
 	color: #4A4A4F;
 	border: 1px solid #E1E1E6;
 
-
 	&:hover {
 		overflow-x: hidden;
 		cursor: pointer;
+		filter: drop-shadow(0px 4px 32px rgba(0, 0, 0, 0.1));
+
+		&::-webkit-scrollbar {
+			width: 2px;
+		}
+
+		&::-webkit-scrollbar-track {
+			background-color: #E1E1E6;
+			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: #2244CC;
+			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+		}
 	}
 
 	.gradient_block {
