--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,10 +83,19 @@ body {
 
 		&>li {
 			padding-bottom: 14px;
-			font-weight: 700;
-			font-size: 18px;
-			line-height: 26px;
-			color: #4A4A4F;
+
+
+			& .tablink {
+				padding: 0;
+				font-weight: 700;
+				font-size: 18px;
+				line-height: 26px;
+				color: #4A4A4F;
+				background-color: #fff;
+				border: none;
+				outline: none;
+				cursor: pointer;
+			}
 
 			&:hover {
 				cursor: pointer;
