--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.container {
+  margin: 0 auto;
+  width: 1328px;
+}
+
 .material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 20;
 }
@@ -46,11 +51,6 @@ body {
   background-color: #FFFFFF;
 }
 
-.container {
-  margin: 0 auto;
-  width: 1328px;
-}
-
 .social {
   padding-top: 56px;
   padding-bottom: 80px;
@@ -82,6 +82,7 @@ body {
 .social__tabs > li .tablink {
   padding: 0;
   padding-bottom: 14px;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
@@ -93,13 +94,6 @@ body {
 }
 .social__tabs > li:hover {
   cursor: pointer;
-}
-
-.divider {
-  margin: 0;
-  margin-bottom: 32px;
-  width: 100%;
-  border: 1px solid #E1E1E6;
 }
 
 .card {
@@ -171,6 +165,13 @@ body {
   margin-right: 6px;
   text-decoration: none;
   color: #2244CC;
+}
+
+.divider {
+  margin: 0;
+  margin-bottom: 32px;
+  width: 100%;
+  border: 1px solid #E1E1E6;
 }
 
 @media screen and (max-width: 1500px) {
