--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,106 +2,14 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-.material-symbols-outlined {
-	font-variation-settings:
-		'FILL' 0,
-		'wght' 300,
-		'GRAD' 0,
-		'opsz' 20;
-}
-
-.swiper-button-prev::after,
-.swiper-button-next::after {
-	display: none;
-}
-
-.swiper-pagination {
-	display: none;
-	justify-content: center;
-
-	&-bullet {
-		width: 16px;
-		height: 4px;
-		background-color: #191928;
-		opacity: 0.5;
-		border-radius: 0%;
-
-		&-active {
-			width: 24px;
-			background-color: #2244CC;
-			opacity: 1;
-
-			&-next,
-			&-next-next {
-				display: none;
-			}
-		}
-	}
-}
-
-.swiper span.material-symbols-outlined {
-	display: flex;
-	margin-top: 0;
-	top: 178px;
-	right: -22px;
-	width: 44px;
-	height: 44px;
-	color: #353545;
-	background-color: #FFFFFF;
-}
-
 .container {
 	margin: 0 auto;
 	width: 1328px;
 }
 
-.social {
-	padding-top: 56px;
-	padding-bottom: 80px;
-	height: 818px;
-
-	&__header {
-		font-weight: 700;
-		font-size: 32px;
-		line-height: 40px;
-		color: #19191E;
-		margin-bottom: 16px;
-	}
-
-	&__descr {
-		font-weight: 400;
-		font-size: 16px;
-		line-height: 24px;
-		color: #4A4A4F;
-		margin-bottom: 32px;
-	}
-
-	&__tabs {
-		display: flex;
-		justify-content: space-between;
-		width: 522px;
-
-		&>li {
-			& .tablink {
-				padding: 0;
-				padding-bottom: 14px;
-				font-weight: 700;
-				font-size: 18px;
-				line-height: 26px;
-				color: #4A4A4F;
-				background-color: #fff;
-				border: none;
-				outline: none;
-				cursor: pointer;
-			}
-
-			&:hover {
-				cursor: pointer;
-			}
-		}
-
-	}
-}
+@import 'components/swiper';
+@import 'components/social';
+@import 'components/card';
 
 .divider {
 	margin: 0;
@@ -110,74 +18,7 @@ body {
 	border: 1px solid #E1E1E6;
 }
 
-.card {
-	position: relative;
-	width: 320px;
-	max-height: 472px;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 24px;
-	color: #4A4A4F;
-	border: 1px solid #E1E1E6;
 
-	&:hover {
-		overflow-x: hidden;
-		cursor: pointer;
-		filter: drop-shadow(0px 4px 32px rgba(0, 0, 0, 0.1));
-
-		&::-webkit-scrollbar {
-			width: 2px;
-		}
-
-		&::-webkit-scrollbar-track {
-			background-color: #E1E1E6;
-			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		}
-
-		&::-webkit-scrollbar-thumb {
-			background-color: #2244CC;
-			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-		}
-	}
-
-	.gradient_block {
-		position: sticky;
-		bottom: 0px;
-		left: 0px;
-		width: 100%;
-		height: 80px;
-		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 21.88%, #FFFFFF 69%);
-		border-bottom: 1px solid #E1E1E6;
-	}
-
-	&__slider {
-		display: flex;
-
-		&_wrapper {
-			position: relative;
-			overflow: hidden;
-		}
-	}
-
-	&__promo {
-		padding: 26px 31px;
-		height: 365px;
-	}
-
-	&__hashtag {
-		margin-top: 26px;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: flex-start;
-
-		&_link {
-			display: block;
-			margin-right: 6px;
-			text-decoration: none;
-			color: #2244CC;
-		}
-	}
-}
 
 
 @media screen and (max-width: 1500px) {
